--- a/.github/workflows/auto-reactapp-update.yml
+++ b/.github/workflows/auto-reactapp-update.yml
@@ -35,7 +35,7 @@ jobs:
           cmd: install
       
       - name: Creating build
-        run: npm run build
+        run: yarn build
         
       - name: Installing Surge
         run: npm install -g surge
